--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -146,20 +146,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "O domínio da função é o R² e a imagem pertence ao intervalor [0,1]"
+    "O domínio da função é o R² e a imagem pertence ao intervalor [0,1]. Esse domínio é compacto e convexo."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ainda, fixando uma das variáveis, a demonstra periodicidade."
+    "Por ser composta por funções limitadas, a função não é coerciva."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ainda, fixando uma das variáveis, a funçaõ demonstra periodicidade."
    ]
   },
   {
