Metodo de Newton e do Gradiente adicionados

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -147,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O domínio da função é o R² e a imagem pertence ao intervalor [0,1]. Esse domínio é compacto e convexo."
+    "O domínio da função é o R² e a imagem pertence ao intervalor [-1,1]. Esse domínio é compacto e convexo."
    ]
   },
   {
@@ -162,6 +162,59 @@
    "metadata": {},
    "source": [
     "Ainda, fixando uma das variáveis, a funçaõ demonstra periodicidade."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como ambas as variáveis estão sempre elevadas ao quadrado em todas as partes da função, o valor avaliado no intervalo x1, x2 pertencem a ]-inf, 0] é o igual ao avaliado no intervalo x1, x2 pertencem a [0, +inf[.  se |x1|, |x2| se mantém constantes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por isso, o plot das curvas de nível demonstra simetria em relação aos eixos x = 0 e y = 0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"curva_nivel.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "teste"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "seção aurea G: xinicial = (0.5, 1)  ro = 1, epsolon = 10^-7 ponto = (-1.54399, -0.886227) K = 21;\n",
+      "seção aurea G: xinicial = (1, 2)  ro = 0.1, epsolon = 10^-7 ponto = (1.53499, 1.98166) k = 12; \n",
+      "seção aurea G: xinicial = (0.5, 1)  ro = 0.1, epsolon = 10^-7 ponto = (1.54399, 0.886227) K = 27; \n",
+      "seção aurea G: xinicial = (-1, 1)  ro = 0.1, epsolon = 10^-7 ponto = (-1.54399, 0.886227) K = 27;\n",
+      "seção aurea G: xinicial = (4, -4)  ro = 0.1, epsolon = 10^-7 ponto = (1.54399, -2.65868) K = 26;\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"seção aurea G: xinicial = (0.5, 1)  ro = 1, epsolon = 10^-7 ponto = (-1.54399, -0.886227) K = 21;\")\n",
+    "print (\"seção aurea G: xinicial = (1, 2)  ro = 0.1, epsolon = 10^-7 ponto = (1.53499, 1.98166) k = 12; \")\n",
+    "print (\"seção aurea G: xinicial = (0.5, 1)  ro = 0.1, epsolon = 10^-7 ponto = (1.54399, 0.886227) K = 27; \")\n",
+    "print (\"seção aurea G: xinicial = (-1, 1)  ro = 0.1, epsolon = 10^-7 ponto = (-1.54399, 0.886227) K = 27;\")\n",
+    "print (\"seção aurea G: xinicial = (4, -4)  ro = 0.1, epsolon = 10^-7 ponto = (1.54399, -2.65868) K = 26;\")\n"
    ]
   },
   {
