--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -290,7 +290,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"aureaQuaseNewton.png\">"
+    "<img src=\"quaseNewtonConvergiu.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para que o método convergisse em certos pontos, foi necessário adicionar outras condições de parada (especificadas na coluna de OBS). matrizH - matrizH > epsolon usa uma função que \"calcula\" um módulo de uma matriz. Dessa forma, estimo a diferença entre os \"módulos\" antes e depois de a matriz ser atualizada. Essa diferença não foi o suficiente para que o ponto (1, 2) convergisse assim que o resultado não tivesse muita alteração, mas foi o suficiente para não deixar o método disparar. Antes disso, apenas com a restrição xk = xk-1 > epsolon o método parava na 2a iteração, com a função valendo ~-0.2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Não consegui encontrar um ponto em que o Método Quase Newton não convergisse."
    ]
   },
   {
@@ -298,6 +312,34 @@
    "metadata": {},
    "source": [
     "    Busca de Armijo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Método do Gradiente"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"armijoGradiente.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Os pontos calculados pelo método do gradiente utilizando a busca de Armijo são os mesmos calculados utiliando a seção áurea nesse mesmo método. Podemos perceber que o método de Armijo é menos preciso (pelo menos em alguns pontos) do que a busca da seção áurea. Por outro lado, o método convergiu em muito menos iterações."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Método de Newton"
    ]
   },
   {
